Fixed coloring, alignments and overflow for the address widget.

--- a/frontend/src/assets/sass/paper/_typography.scss
+++ b/frontend/src/assets/sass/paper/_typography.scss
@@ -60,17 +60,17 @@ h1 small, h2 small, h3 small, h1 .small, h2 .small, h3 .small {
 }
 
 .wallet-address {
+  display: block;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
   padding-top: 0em;
-  padding-bottom: 0em;
+  margin-bottom: 0em;
   font-size: 1.5625rem;
   font-weight: 100;
   @include themed() {
       color: t('walletAddressColor');
   }
-}
-
-.wallet-address > p-button {
-  margin-bottom: 10em;
 }
 
 .title-uppercase {
